2006-03-03  Steve Ellcey  <sje@cup.hp.com>

	PR rtl-optimization/26345
	PR target/19061
	* config/ia64/predicates.md (basereg_operand): Don't look in subregs.

2006-03-02  Alan Modra  <amodra@bigpond.net.au>

	PR target/26453
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
	output traceback table for thunks.  Localise rs6000_stack_info call.

2006-02-28  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi: Require GNU tar version 1.14.

2006-02-28  Mark Mitchell  <mark@codesourcery.com>

	* BASE-VER: 4.1.1.
	* DEV-PHASE: Prerelease.

2006-02-28  Release Manager

	* GCC 4.1.0 released.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-20  Roger Sayle  <roger@eyesopen.com>
	* gthr-posix.h: On Tru64, map __gthr_foo as a weak reference to
	__foo and not foo when _PTHREAD_USE_MANGLED_NAMES_ is defined.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-21  Jakub Jelinek  <jakub@redhat.com>
	PR middle-end/26379
	* combine.c (simplify_shift_const_1): Disable nested shifts
	optimization for vector shifts.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2006-02-16  Denis Nagorny <denis_nagorny@linux.intel.com>
	PR rtl-optimization/25603
	* reload.c (reg_inc_found_and_valid_p): New. Check REG_INC note.
	(regno_clobbered_p): Use it. Reusing SETS argument for REG_INC case.
	* reload1.c (choose_reload_regs): Added call of regno_clobbered_p 
	with new meaning of SETS.

2006-02-19  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* doc/install.texi: Add missing `@samp'.

2006-02-19  David Edelsohn  <edelsohn@gnu.org>

	PR target/26350
	* config/rs6000/rs6000.md (extenddftf2): Force 0.0 to validized
	MEM for ABI_V4 pic.

2006-02-18  Mark Wielaard  <mark@klomp.org>

	* doc/contrib.texi (Contributors): Add classpath/libgcj hackers
	who added new 4.1 features, bug fixes and integration support.

2006-02-18  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
